--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <%- include('layouts/header.ejs');-%>
 <body>
+<%- include('layouts/navbar'); -%>
 <h1>
     Skip the Line
 </h1>
