--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 <html lang="en">
 <%- include('layouts/header.ejs');-%>
 <body>
+<%- include('layouts/navbar.ejs');-%>
 <h1>Log ind for at benytte vores produkter</h1>
 
 <form action="/users/login" method="POST" enctype="application/x-www-form-urlencoded" >
