--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,7 @@
 <%- include('layouts/header.ejs');-%>
 
 <body>
+<%- include('layouts/navbar.ejs');-%>
 <h1>
     Register as a new user here
 </h1>
