--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -4,6 +4,7 @@
 <%- include('layouts/header.ejs');-%>
 
 <body>
+<%- include('layouts/navbar.ejs');-%>
 <h1>
     Admin can register a linestander and update/delete linestander
 </h1>
