--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -11,6 +11,6 @@
         <button type="submit" class="logout-btn">Logout</button>
     </div>
 </form>
-
+<%- include('layouts/scripts');-%>
 </body>
 </html>
