--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,7 +37,7 @@
         <p>Already have an account? <a href="/login">Sign in</a>.</p>
     </div>
 </form>
-
+<%- include('layouts/scripts');-%>
 </body>
 
 </html>
