--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -38,16 +38,16 @@
     <a href="/get-data"> Load data</a>
 
     <div>
-        <% for(var i = 0; i < users.length; i++) { %>
+
        <article class="item">
            <br>
-           <div> Username: <%= users[i].username %> </div>
+           <div> Username:  </div>
            <br>
-           <div> Password: <%= users[i].password %> </div>
+           <div> Password:  </div>
            <br>
-           <div> ID: <%= users[i]._id %> </div>
+           <div> ID:  </div>
        </article>
-        <% } %>
+
     </div>
 
 </section>
