--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,4 +1,6 @@
 <!-- Navigation -->
+<head>
+    <body>
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,3 +25,6 @@
         </div>
     </div>
 </nav>
+
+</body>
+</head>
