--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -19,6 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/register">New User</a>
                     </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/products">Products</a>
+                </li>
             </ul>
         </div>
     </div>
