--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -12,14 +12,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
+                <% if(loggedIn) { %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">New User</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <% } %>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Log out</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/register">New User</a>
                     </li>
             </ul>
         </div>
