Navbar - vis ting

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -12,7 +12,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
-                <% if(loggedIn) { %>
+                <% if(!loggedIn) { %>
                 <li class="nav-item">
                     <a class="nav-link" href="/register">New User</a>
                 </li>
