New product - meget flot

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,10 @@ section h3 {
     background: #3498db;
 }
 
+.new_product {
+    background: lightskyblue;
+}
+
 .delete {
     background: #e74c3c;
 }
