--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -71,29 +71,45 @@
 
 <section class="new_product">
     <h3>ADD A NEW PRODUCT</h3>
-<form action="/product/new" method ="POST" enctype="application/x-www-form-urlencoded">
-    <div class="control-group">
-        <div class="form-group floating-label-form-group controls">
-            <div class="input">
-            <label>New product</label>
-            <input type="text" class="form-control" placeholder="Product name" id="productName" name="productName">
+    <form action="/product/new" method ="POST" enctype="application/x-www-form-urlencoded">
+        <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+                <div class="input">
+                    <label>New product</label>
+                    <input type="text" class="form-control" placeholder="Product name" id="productName" name="productName">
+                </div>
+            </div>
+            <br>
         </div>
-        </div>
-        <br>
-    </div>
-    <div class="control-group">
-        <div class="form-group floating-label-form-group controls">
-            <div class="input">
-            <label>Price</label>
-            <input type="number" class="form-control" placeholder="Product price" id="price" name="price">
+        <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+                <div class="input">
+                    <label>Price</label>
+                    <input type="number" class="form-control" placeholder="Product price" id="price" name="price">
+                </div>
             </div>
         </div>
-    </div>
-    <br>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary" id="addProduct">Add order</button>
-    </div>
-</form>
+        <br>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary" id="addProduct">Add order</button>
+        </div>
+    </form>
+</section>
+
+<section class="delete">
+    <h3>DELETE</h3>
+    <form action="/product/new" method ="POST" enctype="application/x-www-form-urlencoded">
+        <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+                <div class="input">
+                    <label>Delete</label>
+                    <input type="text" class="form-control" placeholder="Delete" id="productName" name="productName">
+                </div>
+            </div>
+            <br>
+        </div>
+
+    </form>
 </section>
 
 <%- include('layouts/scripts');-%>
