--- a/views/lineItems.ejs
+++ b/views/lineItems.ejs
@@ -31,7 +31,7 @@
             <br>
 
             <div class="clearfix">
-                <a class="btn btn-primary float-right" href="#">Order</a>
+                <a class="btn btn-primary float-right" href="/order">Order</a>
                 <h2 class="post-title" style="float: right; margin-right: 10px">
                     Total price: <%= totalPrice%>,-
                 </h2>
