--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -45,12 +45,11 @@
        </article>
         <% } %>
     </div>
-
 </section>
 
 <section class="update">
     <h3>UPDATE data</h3>
-    <form action="/update" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/update/:id" method="put" enctype="application/x-www-form-urlencoded">
         <div class="input">
             <label for="id"> ID </label>
             <input type="text" id="id" name="id">
