--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -34,6 +34,14 @@
                         <a class="nav-link" href="/logout">Log out</a>
                     </li>
                 <% } %>
+                <% if(LSCheck) { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Log out</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/LineStander">LineStander</a>
+                    </li>
+                <% } %>
             </ul>
         </div>
     </div>
