--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,10 +8,10 @@
 
 <form action="/users/login" method="POST" enctype="application/x-www-form-urlencoded" >
 
-    <p>username</p>
-    <input type="text" name="username" placeholder="enter username" >
-    <p>password</p>
-    <input type="password" name="password" placeholder="enter password">
+    <p><b> Username</b></p>
+    <input type="text" name="username" placeholder="Enter username" >
+    <p><b> Password </b></p>
+    <input type="password" name="password" placeholder="Enter password">
     <hr>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Login</button>
