--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,20 +8,24 @@
 <h1>
     Register as a new user here
 </h1>
+<hr>
+<% if(errors != null && errors.length > 0) { %>
+    <% for(var i = 0; i <errors.length; i++) { %>
+        <li class="list-group-item list-group-item-danger"> <%= errors[i] %> </li>
+    <% } %>
+    <% } %>
+
 
 <form action="/users/register" method="POST" enctype="application/x-www-form-urlencoded">
     <div class="container">
         <p>Please fill in this form to create an account.</p>
-        <hr>
 <div class="control-group">
      <div class="form-group floating-label-form-group controls">
         <label for="Username"><b>Username</b></label>
         <input type="text" placeholder="Username" id="username" name="username">
     </div>
 </div>
-
         <br>
-
 <div class="control-group">
     <div class="form-group floating-label-form-group control">
         <label for="psw"><b>Password</b></label>
@@ -37,6 +41,7 @@
         <p>Already have an account? <a href="/login">Sign in</a>.</p>
     </div>
 </form>
+
 <%- include('layouts/scripts');-%>
 </body>
 
