Rettelser til orderHistory

--- a/views/lineStander.ejs
+++ b/views/lineStander.ejs
@@ -23,9 +23,10 @@
                 <% for(var u = 0; u < arr.length; u++) { %>
                         <br>
                         <div> <b>Product:</b> <%= arr[u].product.productName %> <br>
-                            <b>Quantity:</b> <%= arr[u].qty %></div>
+                            <b>Quantity:</b> <%= arr[u].qty %>
+                        </div>
                         <br>
-                    </div>
+                </div>
 
 
 
