--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -6,6 +6,14 @@
 <body>
 <%- include('layouts/navbar.ejs');-%>
 <%- include('layouts/scripts');-%>
+
+<script>
+    function onload(){
+        console.log("test")
+    }
+    onload();
+</script>
+
 <h1>
     Admin can register a linestander and update/delete linestander
 </h1>
@@ -74,9 +82,11 @@
     </div>
 </section>
 
+
+
 <section class="update">
     <h3>UPDATE data</h3>
-    <form id="updateForm" name="updateForm" enctype="application/x-www-form-urlencoded">
+    <form id="updateForm" name="updateForm" action="/update">
         <div class="input">
             <label for="id"> ID </label>
             <input type="text" id="id" name="id">
@@ -87,7 +97,7 @@
             <input type="text" id="username" name="username">
         </div>
         <br>
-        <button type="submit" id="formButton" name="formButton" formmethod="get" onclick="updateUser()">Update</button>
+        <button type="submit" id="formButton" name="formButton" >Update</button>
     </form>
 </section>
 
@@ -135,6 +145,8 @@
 
     </form>
 </section>
+
+<script src="/public/js/updateUser.js"></script>
 
 
 </body>
