PUT-metoden virker til LineStander nu! S/O Kasper

--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -7,12 +7,6 @@
 <%- include('layouts/navbar.ejs');-%>
 <%- include('layouts/scripts');-%>
 
-<script>
-    function onload(){
-        console.log("test")
-    }
-    onload();
-</script>
 
 <h1>
     Admin can register a linestander and update/delete linestander
@@ -44,7 +38,7 @@
         <div class="control-group">
             <div class="form-group floating-label-form-group controls">
                 <label for="Username"><b>Linestander name</b></label><br>
-                <input type="text" placeholder="Username" id="username" name="username">
+                <input type="text" placeholder="Username" id="username2" name="username2">
             </div>
         </div>
         <br>
@@ -86,7 +80,7 @@
 
 <section class="update">
     <h3>UPDATE data</h3>
-    <form id="updateForm" name="updateForm" action="/update">
+    <form id="updateForm" name="updateForm" >
         <div class="input">
             <label for="id"> ID </label>
             <input type="text" id="id" name="id">
@@ -135,7 +129,7 @@
             <div class="form-group floating-label-form-group controls">
                 <div class="input">
                     <label>ID</label>
-                    <input type="text" class="form-control" placeholder="ID" id="id" name="id">
+                    <input type="text" class="form-control" placeholder="ID" id="deleteId" name="deleteId">
                 </div>
             </div>
             <div></div>
@@ -146,7 +140,7 @@
     </form>
 </section>
 
-<script src="/public/js/updateUser.js"></script>
+<script src="js/updateUser.js"></script>
 
 
 </body>
