--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -9,12 +9,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
+                <% if(!LSCheck) { %>
                 <li class="nav-item">
                     <a class="nav-link" href="/products">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/lineItems">Shopping cart</a>
                 </li>
+                <% } %>
 
                 <% if(admin) { %>
                 <li class="nav-item">
