--- a/views/lineStander.ejs
+++ b/views/lineStander.ejs
@@ -9,7 +9,10 @@
     <h2> Orders available for pick-up</h2>
     <div>
         <% for(var i = 0; i < availableOrders.length; i++) { %>
+
             <article class="data">
+                <div> <h3>Order id:</h3> <p id="orderId"> <%= availableOrders[i]._id %> </p> </div>
+                <br>
                 <div> <h3>Ordered by:</h3> <%= availableOrders[i].orderedBy %> </div>
                 <br>
                 <div> <h3>Delivery Location:</h3> <%= availableOrders[i].deliveryLocation %> </div>
@@ -32,7 +35,7 @@
 
             </article>
             <% } %>
-            <button type="button">Take care of this delivery</button>
+            <button type="button" id="pickUpButton">Take care of this delivery</button>
         <br>
             <br>
         <% } %>
@@ -120,7 +123,7 @@
     </form>
 </section>
 -->
-
+<script src="js/lineStanderChange.js"></script>
 <%- include('layouts/scripts');-%>
 </body>
 </html>
