Rettede lige lidt i ved put-kaldet

--- a/views/lineStander.ejs
+++ b/views/lineStander.ejs
@@ -49,6 +49,8 @@
             <article class="data">
                 <div> <h3>Ordered by:</h3> <%= pickedUpOrders[i1].orderedBy %> </div>
                 <br>
+                <div> <h3>Picked up by:</h3> <%= pickedUpOrders[i1].pickedUpBy %> </div>
+                <br>
                 <div> <h3>Delivery Location:</h3> <%= pickedUpOrders[i1].deliveryLocation %> </div>
                 <br>
                 <% let arr1 = [];
