Index/frontpage added styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,40 @@
 
 <%- include('layouts/navbar.ejs');-%>
 
-<h1>
+<div style="text-align:center;">
+<h1 style="font-size: 60px">
     Skip the Line
 </h1>
 
-<p>
+<p style="font-size: 35px">
     Welcome to Skip The Line
 </p>
+
+<p style="font-style: italic"> Order food through SkipTheLine and get your food delivered where ever you'd like on Roskilde Festival! </p>
+
+
+</div>
+
+
+<br>
+
+<div>
+<p> How it works:</p>
+<br>
+<ol style="text-align: left">
+    <li>Sign-up or create a user</li>
+    <br>
+    <li>Choose your products and add them to your shopping cart</li>
+    <br>
+    <li>Choose delivery location</li>
+    <br>
+    <li>Your meal will be delivered to your location</li>
+    <br>
+    <li>Enjoy!</li>
+</ol>
+</div>
+
+
 <%- include('layouts/scripts');-%>
 </body>
 
