--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -20,8 +20,11 @@
 
                 <% if(admin) { %>
                 <li class="nav-item">
-                    <a class="nav-link" href="/registerLinestander">Admin page</a>
+                    <a class="nav-link" href="/registerLinestander">Admin LS page</a>
                 </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/adminUser">Admin user page</a>
+                    </li>
                 <% } %>
 
                 <% if(!loggedIn && !LSCheck) { %>
