--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -83,23 +83,23 @@
     <form id="updateForm" name="updateForm" >
         <div class="input">
             <label for="id"> ID </label>
-            <input type="text" id="id" name="id">
+            <input type="text" id="id" name="id" placeholder="ID">
         </div>
         <div class="input">
             <label for="username"> Username </label>
-            <input type="text" id="updateUsername">
+            <input type="text" id="updateUsername" placeholder="Username">
         </div>
         <div class="input">
             <label for="fullName"> Full name </label>
-            <input type="text" id="updateName">
+            <input type="text" id="updateName" placeholder="Full Name">
         </div>
         <div class="input">
             <label for="email"> Email </label>
-            <input type="text" id="updateEmail">
+            <input type="text" id="updateEmail" placeholder="Email">
         </div>
         <div class="input">
             <label for="phoneNumber"> Phone Number </label>
-            <input type="text" id="updateNumber">
+            <input type="text" id="updateNumber" placeholder="Phone Number">
         </div>
         <br>
         <button type="submit" id="formButton" name="formButton" >Update</button>
@@ -135,7 +135,7 @@
 
 <section class="delete">
     <h3>DELETE</h3>
-    <form id="deleteUser">
+    <form id="deleteLineStander">
         <div class="control-group">
             <div class="form-group floating-label-form-group controls">
                 <div class="input">
@@ -151,7 +151,7 @@
 </section>
 
 <script src="js/updateUser.js"></script>
-<script src="js/deleteUser.js"></script>
+<script src="js/deleteLineStander.js"></script>
 
 </body>
 
