Index/frontpage added styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     Welcome to Skip The Line
 </p>
 
-<p style="font-style: italic"> Order food through SkipTheLine and get your food delivered where ever you'd like on Roskilde Festival! </p>
+<p style="font-style: italic"> In collaboration with Meyers you can order food through SkipTheLine and get your food delivered where ever you'd like on Roskilde Festival! </p>
 
 
 </div>
