Index/frontpage added styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,7 @@
     Skip the Line
 </h1>
 
-<p style="font-size: 35px">
-    Welcome to Skip The Line
+<p style="font-size: 35px"><b>Welcome to Skip The Line</b>
 </p>
 
 <p style="font-style: italic"> In collaboration with Meyers you can order food through SkipTheLine and get your food delivered where ever you'd like on Roskilde Festival! </p>
