Der er blevet oprettet en ny Address model, således User nu har 2 felter, der begge peger til Address.js

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,17 +21,86 @@
         <p>Please fill in this form to create an account.</p>
 <div class="control-group">
      <div class="form-group floating-label-form-group controls">
-        <label for="Username"><b>Username</b></label>
-        <input type="text" placeholder="Username" id="username" name="username">
+        <label for="username_customer"><b>Username</b></label>
+        <input type="text" placeholder="Username" id="username_customer" name="username_customer">
     </div>
 </div>
         <br>
 <div class="control-group">
     <div class="form-group floating-label-form-group control">
-        <label for="psw"><b>Password</b></label>
+        <label for="password"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" id="password" name="password">
     </div>
 </div>
+        <br>
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="first_name"><b>First Name</b></label>
+                <input type="text" placeholder="First name" id="first_name" name="first_name">
+            </div>
+        </div>
+        <br>
+
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="last_name"><b>lastname</b></label>
+                <input type="text" placeholder="last name" id="last_name" name="last_name">
+            </div>
+        </div>
+        <br>
+
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Enter email" id="email" name="email">
+            </div>
+        </div>
+        <br>
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="phone_number"><b>Phone Number</b></label>
+                <input type="text" placeholder="Phonenumber" id="phone_number" name="phone_number">
+            </div>
+        </div>
+        <br>
+        <hr>
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="streetName"><b> Street name </b></label>
+                <input type="text" placeholder="enter street name" id="streetName" name="streetName">
+            </div>
+        </div>
+        <br>
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="streetNumber"><b>  Street number</b></label>
+                <input type="number" placeholder="street number" id="streetNumber" name="streetNumber">
+            </div>
+        </div>
+        <br>
+
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="zipCode"><b>zip code</b></label>
+                <input type="text" placeholder="zip-code" id="zipCode" name="zipCode">
+            </div>
+        </div>
+
+        <br>
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="cityName"><b>City name</b></label>
+                <input type="text" placeholder="enter your city" id="cityName" name="cityName">
+            </div>
+        </div>
+        <br>
+
+        <div class="control-group">
+            <div class="form-group floating-label-form-group control">
+                <label for="countryName"><b>Country</b></label>
+                <input type="text" placeholder="country" id="countryName" name="countryName">
+            </div>
+        </div>
         <br>
         <hr>
         <button type="submit" class="registerbtn">Register</button>
