--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-                <label for="fullname"><b>Linestander full name</b></label><br>
+                <label for="fullName"><b>Linestander full name</b></label><br>
                 <input type="text" placeholder="Full name" id="fullName" name="fullName">
             </div>
         </div>
@@ -37,14 +37,14 @@
         <br>
         <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-                <label for="Username"><b>Linestander name</b></label><br>
+                <label for="username2"><b>Linestander name</b></label><br>
                 <input type="text" placeholder="Username" id="username2" name="username2">
             </div>
         </div>
         <br>
         <div class="control-group">
             <div class="form-group floating-label-form-group control">
-                <label for="psw"><b>Linestander password</b></label><br>
+                <label for="password"><b>Linestander password</b></label><br>
                 <input type="password" placeholder="Enter Password" id="password" name="password">
             </div>
         </div>
